--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-        <script src="index.js" type="module" async defer></script>
-        <script src="classes.js" async defer></script>
-        <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
-        
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+
+<head>
+    <meta charset='utf-8'>
+    <title></title>
+    <meta name='description' content=''>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' href='index.css'>
+    <script src='demo.js' async></script>
+    <script src='index.js' type='module' async defer></script>
+    <script src='classes.js' async defer></script>
+    <script src='https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js'></script>
+    <link type='text/css' rel='stylesheet' href='https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css' />
+
+</head>
+
+<body>
+    <!--[if lt IE 7]>
+            <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='#'>upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
-    </body>
+    <table class='requests-wrapper'>
+        <thead>
+            <tr>
+                <th>Time</th> <!-- th = row header -->
+                <th>RequesterName</th> 
+                <th>CurrentLocation</th>
+                <th>Destination</th>
+                <th>Assign</th>
+              </tr>  
+        </thead>
+        <tbody>
+            <tr class=Table-Header>
+                <td class='time'>00:00</td>  <!-- td = row list item -->
+                <td class='requester-name'>Jodi</td>
+                <td class='curr-location'>Coop</td>
+                <td class='destination'>Villas</td>
+                <td class='assign'>o7</td>
+            </tr>
+            <tr>
+            </tr>
+
+        </tbody>
+    </table>
+
+</body>
+
 </html>
