--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <!-- JavaScript -->
     <script src="index.js" type="module" async defer></script>
@@ -42,26 +44,35 @@
                                     align-items-sm-start" id="menu">
                         <li class="nav-item">
                             <a href="#" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-request"></i><span class="ms-1 d-none d-sm-inline">Requests</span>
+                                <i class="fs-5 bi-request"></i><span class="ms-1 d-none d-sm-inline">
+                                    <span class="material-icons">location_on</span>
+                                    Requests</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-walkers"></i><span class="ms-1 d-none d-sm-inline">Walkers</span></a>
+                                <i class="fs-5 bi-walkers"></i><span class="ms-1 d-none d-sm-inline">
+                                    <span class="material-icons">directions_walk</span>
+                                    Walkers</span></a>
                         </li>
                         <li>
                             <a href="#" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-chat"></i><span class="ms-1 d-none d-sm-inline">Chat</span></a>
+                                <i class="fs-5 bi-chat"></i><span class="ms-1 d-none d-sm-inline">
+                                    <span class="material-icons">chat</span>
+                                    Chat</span></a>
                         </li>
                         <li>
                             <a href="#" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-settings"></i><span class="ms-1 d-none d-sm-inline">Settings</span>
+                                <i class="fs-5 bi-settings"></i><span class="ms-1 d-none d-sm-inline">
+                                    <span class="material-icons">settings</span>
+                                    Settings</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-logout"></i><span class="ms-1 d-none d-sm-inline">Log
-                                    Out</span>
+                                <i class="fs-5 bi-logout"></i><span class="ms-1 d-none d-sm-inline">
+                                    <span class="material-icons">logout</span>
+                                    Log Out</span>
                             </a>
                         </li>
                     </ul>
@@ -69,7 +80,77 @@
             </div>
             <div class="col d-flex flex-column h-sm-100">
                 <main class="row overflow-auto">
+                    <div class="col pt-4">
+                        <h1>Requests</h1>
 
+                        <!-- New Requests table -->
+                        <table class="table new-requests table-responsive">
+                            <thead class="thead-light">
+                                <tr>
+                                    <h3>New Requests</h3>
+                                    <th scope="col" style="width: 10%">Time</th>
+                                    <th scope="col" style="width: 15%">Requester Name</th>
+                                    <th scope="col" style="width: 30%">Current Location</th>
+                                    <th scope="col" style="width: 30%">Destination</th>
+                                    <th scope="col" style="width: 10%">Assign</th>
+                                    <th scope="col" style="width: 10%">Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Example row -->
+                                <tr>
+                                    <th scope=" row">11:39 PM</th>
+                                    <td>Helen Hywater</td>
+                                    <td>1234 Some Street Name, City</td>
+                                    <td>1234 Some Street Name, City</td>
+                                    <td>
+                                        <span class="material-icons">person_add</span>
+                                    </td>
+                                    <td>
+                                        <span class="material-icons">delete</span>
+                                    </td>
+                                </tr>
+                                <!-- End example row -->
+                            </tbody>
+                        </table>
+                        <!-- End of New Requests table -->
+
+
+                        <!-- Current Requests table -->
+                        <table class="table new-requests table-responsive">
+                            <thead class="thead-light">
+                                <tr>
+                                    <h3>Current Requests</h3>
+                                    <th scope="col" style="width: 10%">Time</th>
+                                    <th scope="col" style="width: 15%">Requester Name</th>
+                                    <th scope="col" style="width: 30%">Destination</th>
+                                    <th scope="col" style="width: 10%">Walkers</th>
+                                    <th scope="col" style="width: 15%">Time Elapsed</th>
+                                    <th scope="col" style="width: 10%">Chat</th>
+                                    <th scope="col" style="width: 10%">Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Example row -->
+                                <tr>
+                                    <th scope=" row">11:39 PM</th>
+                                    <td>Helen Hywater</td>
+                                    <td>1234 Some Street Name, City</td>
+                                    <td></td>
+                                    <td>1:10:02</td>
+                                    <td>
+                                        <span class="material-icons">chat</span>
+                                    </td>
+                                    <td>
+                                        <span class="material-icons">delete</span>
+                                    </td>
+                                </tr>
+                                <!-- End example row -->
+                            </tbody>
+                        </table>
+                        <!-- End of Current Requests table -->
+
+                    </div>
                 </main>
                 <footer class="row py-4 mt-auto">
 
