--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="index.css">
         <script src="index.js" type="module" async defer></script>
         <script src="classes.js" async defer></script>
+        <script src="walker.js" async defer></script>
         <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
         
