--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <!-- JavaScript -->
     <script src="index.js" type="module" async defer></script>
     <script src="classes.js" async defer></script>
+    <script src="walker.js" async defer></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
 
 
