Added walkers table to Walkers page

--- a/src/walkers.html
+++ b/src/walkers.html
@@ -83,72 +83,33 @@
                     <div class="col pt-4">
                         <h1>Requests</h1>
 
-                        <!-- New Requests table -->
+                        <!-- Active walkers table -->
                         <table class="table new-requests table-responsive">
                             <thead class="thead-light">
                                 <tr>
-                                    <h3>New Requests</h3>
-                                    <th scope="col" style="width: 10%">Time</th>
-                                    <th scope="col" style="width: 15%">Requester Name</th>
-                                    <th scope="col" style="width: 30%">Current Location</th>
-                                    <th scope="col" style="width: 30%">Destination</th>
-                                    <th scope="col" style="width: 10%">Assign</th>
-                                    <th scope="col" style="width: 10%">Delete</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Example row -->
-                                <tr>
-                                    <th scope=" row">11:39 PM</th>
-                                    <td>Helen Hywater</td>
-                                    <td>1234 Some Street Name, City</td>
-                                    <td>1234 Some Street Name, City</td>
-                                    <td>
-                                        <span class="material-icons">person_add</span>
-                                    </td>
-                                    <td>
-                                        <span class="material-icons">delete</span>
-                                    </td>
-                                </tr>
-                                <!-- End example row -->
-                            </tbody>
-                        </table>
-                        <!-- End of New Requests table -->
-
-
-                        <!-- Current Requests table -->
-                        <table class="table new-requests table-responsive">
-                            <thead class="thead-light">
-                                <tr>
-                                    <h3>Current Requests</h3>
-                                    <th scope="col" style="width: 10%">Time</th>
-                                    <th scope="col" style="width: 15%">Requester Name</th>
-                                    <th scope="col" style="width: 30%">Destination</th>
-                                    <th scope="col" style="width: 10%">Walkers</th>
-                                    <th scope="col" style="width: 15%">Time Elapsed</th>
+                                    <h3>Walkers</h3>
+                                    <th scope="col" style="width: 15%">Walker Name 1</th>
+                                    <th scope="col" style="width: 15%">Walker Name 2</th>
+                                    <th scope="col" style="width: 10%">Status</th>
                                     <th scope="col" style="width: 10%">Chat</th>
-                                    <th scope="col" style="width: 10%">Delete</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <!-- Example row -->
                                 <tr>
-                                    <th scope=" row">11:39 PM</th>
+                                    <th scope=" row">Helen Hywater</th>
                                     <td>Helen Hywater</td>
-                                    <td>1234 Some Street Name, City</td>
-                                    <td></td>
-                                    <td>1:10:02</td>
+                                    <td class="status">On a walk</td>
                                     <td>
                                         <span class="material-icons">chat</span>
                                     </td>
-                                    <td>
-                                        <span class="material-icons">delete</span>
-                                    </td>
                                 </tr>
                                 <!-- End example row -->
                             </tbody>
                         </table>
-                        <!-- End of Current Requests table -->
+                        <!-- End of Active walkers table -->
+
+
 
                     </div>
                 </main>
