trying to add rounded corners to tables

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                         <h1>Requests</h1>
 
                         <!-- New Requests table -->
-                        <table class="table new-requests table-responsive">
+                        <table class="table new-requests table-responsive table-curved">
                             <thead class="thead-light">
                                 <tr>
                                     <h3>New Requests</h3>
