--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link px-sm-0 px-2">
+                            <a href="walkers.html" class="nav-link px-sm-0 px-2">
                                 <i class="fs-5 bi-walkers"></i><span class="ms-1 d-none d-sm-inline">
                                     <span class="material-icons">directions_walk</span>
                                     Walkers</span></a>
@@ -85,16 +85,17 @@
                         <h1>Requests</h1>
 
                         <!-- New Requests table -->
-                        <table class="table new-requests table-responsive table-curved">
+                        <h3>New Requests</h3>
+                        <div class="d-flex flex-column">
+                        <table class="table new-requests table-responsive table-hover ">
                             <thead class="thead-light">
                                 <tr>
-                                    <h3>New Requests</h3>
                                     <th scope="col" style="width: 10%">Time</th>
-                                    <th scope="col" style="width: 15%">Requester Name</th>
+                                    <th scope="col" style="width: 20%">Requester Name</th>
                                     <th scope="col" style="width: 30%">Current Location</th>
                                     <th scope="col" style="width: 30%">Destination</th>
-                                    <th scope="col" style="width: 10%">Assign</th>
-                                    <th scope="col" style="width: 10%">Delete</th>
+                                    <th scope="col" style="width: 5%">Assign</th>
+                                    <th scope="col" style="width: 5%">Delete</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -114,21 +115,23 @@
                                 <!-- End example row -->
                             </tbody>
                         </table>
+                        </div>
                         <!-- End of New Requests table -->
 
 
                         <!-- Current Requests table -->
+                        <h3>Current Requests</h3>
+                        <div class="d-flex flex-column">
                         <table class="table new-requests table-responsive">
                             <thead class="thead-light">
                                 <tr>
-                                    <h3>Current Requests</h3>
                                     <th scope="col" style="width: 10%">Time</th>
-                                    <th scope="col" style="width: 15%">Requester Name</th>
+                                    <th scope="col" style="width: 20%">Requester Name</th>
                                     <th scope="col" style="width: 30%">Destination</th>
-                                    <th scope="col" style="width: 10%">Walkers</th>
+                                    <th scope="col" style="width: 15%">Walkers</th>
                                     <th scope="col" style="width: 15%">Time Elapsed</th>
-                                    <th scope="col" style="width: 10%">Chat</th>
-                                    <th scope="col" style="width: 10%">Delete</th>
+                                    <th scope="col" style="width: 5%">Chat</th>
+                                    <th scope="col" style="width: 5%">Delete</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -149,6 +152,7 @@
                                 <!-- End example row -->
                             </tbody>
                         </table>
+                        </div>
                         <!-- End of Current Requests table -->
 
                     </div>
