--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
 
 <body>
     <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
     <div class="container-fluid overflow-hidden">
         <div class="row vh-100 overflow-auto">
             <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-light d-flex sticky-top">
@@ -122,7 +122,7 @@
                         <!-- Current Requests table -->
                         <h3>Current Requests</h3>
                         <div class="d-flex flex-column">
-                        <table class="table new-requests table-responsive">
+                        <table class="table new-requests table-responsive table-hover">
                             <thead class="thead-light">
                                 <tr>
                                     <th scope="col" style="width: 10%">Time</th>
@@ -137,7 +137,7 @@
                             <tbody>
                                 <!-- Example row -->
                                 <tr>
-                                    <th scope=" row">11:39 PM</th>
+                                    <th scope="row">11:39 PM</th>
                                     <td>Helen Hywater</td>
                                     <td>1234 Some Street Name, City</td>
                                     <td></td>
