--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <script src="demo.js" async defer></script>
-
+    <script src="walker.js" async defer></script>
     <script src="index.js" type="module" async defer></script>
     
     <script src="classes.js" async defer></script>
