Added descrip comments

--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,7 @@
                                                     <td style="display: flex;border-top: none;align-items: center;">
                                                         <div class="form-check"
                                                             style="height: 13px; width: 13px; padding-left: 1.25rem; padding-bottom: 1.25rem;">
+                                                            <!-- Make sure input class includes "check" to correspond to <script> below -->
                                                             <input class="form-check-input check" type="checkbox"
                                                                 value="" id="flexCheckDefault" style="">
                                                         </div>
@@ -174,6 +175,7 @@
                                                     <td style="display: flex;border-top: none;align-items: center;">
                                                         <div class="form-check"
                                                             style="height: 13px; width: 13px; padding-left: 1.25rem; padding-bottom: 1.25rem;">
+                                                            <!-- Make sure input class includes "check" to correspond to <script> below -->
                                                             <input class="form-check-input check" type="checkbox"
                                                                 value="" id="flexCheckDefault" style="">
                                                         </div>
@@ -197,6 +199,7 @@
                                                 </tr>
                                                 <!-- End of example row -->
 
+                                                <!-- only checkbox can be selected at once -->
                                                 <script>
                                                     $(document).ready(function () {
                                                         $('.check').click(function () {
