--- a/src/index.html
+++ b/src/index.html
@@ -228,8 +228,8 @@ border-top: none;
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-danger">Delete</button>
+                                            data-dismiss="modal" id="cancelDelete">Close</button>
+                                        <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
                                     </div>
                                 </div>
                             </div>
