updated code from main

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                                         <th scope="col" style="width: 5%">Delete</th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="unassignedTable">
                                     <!-- Example row -->
                                     <tr>
                                         <th scope="row">11:39 PM</th>
@@ -183,7 +183,7 @@
                                         <th scope="col" style="width: 5%">Delete</th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="assignedTable">
                                     <!-- Example row -->
                                     <tr>
                                         <th scope="row">11:39 PM</th>
