--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
                                                             style="min-width: 43px; height: 43;">
                                                     </td>
                                                     <td
-                                                        style="width: 55%;border-top: none;display: flex;flex-direction: column;justify-content: space-between;">
+                                                        style="width: 55%;border-top: none;display: flex;flex-direction: column;justify-content: center;">
                                                         <p style="margin: 0; font-weight: 900; font-size: larger;">Brian
                                                         </p>
                                                         <p style="margin: 0; font-weight: 900; font-size: larger;">
@@ -171,32 +171,7 @@
                                                 </tr>
                                                 <!-- End of example row -->
                                                 <!-- Example row -->
-                                                <tr style="display: flex;">
-                                                    <td style="display: flex;border-top: none;align-items: center;">
-                                                        <div class="form-check"
-                                                            style="height: 13px; width: 13px; padding-left: 1.25rem; padding-bottom: 1.25rem;">
-                                                            <!-- Make sure input class includes "check" to correspond to <script> below -->
-                                                            <input class="form-check-input check" type="checkbox"
-                                                                value="" id="flexCheckDefault" style="">
-                                                        </div>
-                                                    </td>
-                                                    <td class="walkers-profiles"
-                                                        style="width: 35%;border-top: none;display: flex;justify-content: space-between;align-items: center;">
-                                                        <img class="rounded-circle profile-pic-small" alt="avatar"
-                                                            src="https://images.unsplash.com/photo-1542909168-82c3e7fdca5c?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1180&amp;q=80"
-                                                            style="min-width: 43px; height: 43px;">
-                                                        <img class="rounded-circle profile-pic-small" alt="avatar"
-                                                            src="https://images.unsplash.com/photo-1542909168-82c3e7fdca5c?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1180&amp;q=80"
-                                                            style="min-width: 43px; height: 43;">
-                                                    </td>
-                                                    <td
-                                                        style="width: 55%;border-top: none;display: flex;flex-direction: column;justify-content: space-between;">
-                                                        <p style="margin: 0; font-weight: 900; font-size: larger;">Brian
-                                                        </p>
-                                                        <p style="margin: 0; font-weight: 900; font-size: larger;">
-                                                            Nyugen</p>
-                                                    </td>
-                                                </tr>
+                                               
                                                 <!-- End of example row -->
 
                                                 <!-- only checkbox can be selected at once -->
