Delete is now working
Deleting a pending request will release the tied walkers and automagically display them as available walkers.

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
                                         </td>
                                         <td class="delete">
                                             <span class="material-icons" data-toggle="modal"
-                                                data-target="#deletePopUp">delete</span>
+                                                data-target="#deletePopUp" id="delete">delete</span>
                                         </td>
                                     </tr>
                                     <!-- End example row -->
@@ -254,7 +254,7 @@
                                         </td>
                                         <td class="delete">
                                             <span class="material-icons" data-toggle="modal"
-                                                data-target="#deletePopUp">delete</span>
+                                                data-target="#deletePopUp" id="delete">delete</span>
                                         </td>
                                     </tr>
                                     <!-- End example row -->
