--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,15 @@
                     class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
                     <a href="/"
                         class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                        <span class="fs-5"><span class="logo d-none
-                                d-sm-inline"><img src="assets/logos/logo_transparent.png"
-                                    alt="Safe Walk logo image"></span></span>
+                        <span class="fs-5">
+                            <span class="logo d-none
+                                d-sm-inline">
+                                <center>
+                                    <img class="img-fluid;" src="assets/logos/logo_transparent.png"
+                                        alt="Safe Walk logo image">
+                                </center>
+                            </span>
+                        </span>
                     </a>
                     <ul class=" nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0
                                     flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center
