--- a/src/user.html
+++ b/src/user.html
@@ -30,7 +30,52 @@
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="user.html">SafeWalkSCU</a>
+        <button class="btn btn-danger my-2 my-sm-0" type="submit">Update Profile</button>
+    </nav>
 
+    <div class="row-content">
+        <div class="card w-75 border-secondary request-body text-center mx-auto" style="margin-top: 20px;">
+            <div class="card-body">
+                <img class="card-img-top img-fluid" style="max-width: 20%;" src="assets/logos/logo_transparent.png"
+                    alt="Safe Walk logo image">
+                <h1 class="card-title">Create A New Request</h1>
+                <p class="card-text">Request an escort</p>
+
+                <form>
+                    <div class="form-group destination">
+                        <label class="control-label">Destination</label>
+                        <input type="text" class="form-control" id="us3-address" />
+                    </div>
+                    <div class="form-group current-location">
+                        <label class="control-label">Current Location</label>
+                        <div class="w-100 d-none d-md-block"></div>
+                        <button onclick="getLocation()">Share Location</button>
+                        <p id="demo"></p>
+                    </div>
+                    <button type="submit" style="margin-top: 20px;" class="btn btn-primary">Submit</button>
+                </form>
+
+                <script>
+                    var x = document.getElementById("demo");
+
+                    function getLocation() {
+                        if (navigator.geolocation) {
+                            navigator.geolocation.getCurrentPosition(showPosition);
+                        } else {
+                            x.innerHTML = "Geolocation is not supported by this browser.";
+                        }
+                    }
+
+                    function showPosition(position) {
+                        x.innerHTML = "Latitude: " + position.coords.latitude +
+                            "<br>Longitude: " + position.coords.longitude;
+                    }
+                </script>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JavaScript, supposed to be at end -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
