--- a/src/user.html
+++ b/src/user.html
@@ -53,26 +53,29 @@
                         <div class="w-100 d-none d-md-block"></div>
                         <button onclick="getLocation()">Share Location</button>
                         <p id="demo"></p>
+
+                        <!-- Get user location - HTML Geolocation? -->
+                        <script>
+                            var x = document.getElementById("demo");
+
+                            function getLocation() {
+                                if (navigator.geolocation) {
+                                    navigator.geolocation.getCurrentPosition(showPosition);
+                                } else {
+                                    x.innerHTML = "Geolocation is not supported by this browser.";
+                                }
+                            }
+
+                            function showPosition(position) {
+                                x.innerHTML = "Latitude: " + position.coords.latitude +
+                                    "<br>Longitude: " + position.coords.longitude;
+                            }
+                        </script>
+
                     </div>
                     <button type="submit" style="margin-top: 20px;" class="btn btn-primary">Submit</button>
                 </form>
 
-                <script>
-                    var x = document.getElementById("demo");
-
-                    function getLocation() {
-                        if (navigator.geolocation) {
-                            navigator.geolocation.getCurrentPosition(showPosition);
-                        } else {
-                            x.innerHTML = "Geolocation is not supported by this browser.";
-                        }
-                    }
-
-                    function showPosition(position) {
-                        x.innerHTML = "Latitude: " + position.coords.latitude +
-                            "<br>Longitude: " + position.coords.longitude;
-                    }
-                </script>
             </div>
         </div>
     </div>
