--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                                     flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center
                                     align-items-sm-start" id="menu">
                         <li class="nav-item">
-                            <a href="#" class="nav-link px-sm-0 px-2">
+                            <a href="index.html" class="nav-link px-sm-0 px-2">
                                 <i class="fs-5 bi-request"></i><span class="ms-1 d-none d-sm-inline">
                                     <span class="material-icons">location_on</span>
                                     Requests</span>
