--- a/src/index_walkers.html
+++ b/src/index_walkers.html
@@ -92,7 +92,7 @@
 
                         <!-- New Walker Modal -->
                         <div class="modal fade" id="newWalkerForm" tabindex="-1" role="dialog"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            aria-labelledby="newWalkerFormLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
